--- a/templates/site-base.html
+++ b/templates/site-base.html
@@ -52,7 +52,7 @@
                                     <li class="dropdown active"><a href="/home">Home</a></li>
                                     <li><a href="index.html">Listings</b></a></li>
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog.html"><i class="fa fa-user"> </i> Dealer Login</a></li>
+                                    <li><a href="/login"><i class="fa fa-user"> </i> Dealer Login</a></li>
                                 </ul>
                             </div>
                             <!-- /.navbar-collapse -->
