Made Sign up as View

--- a/templates/login.html
+++ b/templates/login.html
@@ -74,8 +74,8 @@
                             <div class="form_contact margin-bottom-20">
                                 <div id="result"></div>
                                 <fieldset id="contact_form">
-                                    <input name="username" class="form-control margin-bottom-25" placeholder="Username" />
-                                    <input type="password" name="password" class="form-control margin-bottom-25" placeholder="Password" />
+                                    <input name="username" class="form-control margin-bottom-25" placeholder="Username" required="True" />
+                                    <input type="password" name="password" class="form-control margin-bottom-25" placeholder="Password" required="True" />
                                     <input id="submit_btn" type="submit" value="Sign-In">
                                 </fieldset>
                             </div>
