--- a/templates/login.html
+++ b/templates/login.html
@@ -70,7 +70,8 @@
                 <div class="col-md-5 col-lg-offset-1 col-md-offset-1 padding-right-none xs-padding-left-none sm-padding-left-none xs-margin-top-30">
                     <div class="contact_wrapper information_head">
                         <h3 class="margin-bottom-25 margin-top-none">Login</h3>
-                        <form>
+                        <form method="POST">
+                            {% csrf_token %}
                             <div class="form_contact margin-bottom-20">
                                 <div id="result"></div>
                                 <fieldset id="contact_form">
