Added signup page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,7 @@
 {% load staticfiles %}{% load copyright_disclaimer %}<!doctype html>
+{% load staticfiles %}{% load copyright_disclaimer %}<!doctype html>
+{% load staticfiles %}{% load copyright_disclaimer %}<!doctype html>
+{% load staticfiles %}{% load copyright_disclaimer %}<!doctype html>
 <!--[if IE 7 ]> <html lang="en" class="ie7"> <![endif]-->
 <!--[if IE 8 ]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9 ]> <html lang="en" class="ie9"> <![endif]-->
@@ -63,14 +66,12 @@
             </div>
         </header>
         <br/><br/><br/><br/><br/><br/>
-
-
         <section class="content">
             <div class="container">
                 <div class="col-md-5 col-lg-offset-1 col-md-offset-1 padding-right-none xs-padding-left-none sm-padding-left-none xs-margin-top-30">
                     <div class="contact_wrapper information_head">
                         <h3 class="margin-bottom-25 margin-top-none">Login</h3>
-                        <form method="POST">
+                        <form method="POST" action="/login/">
                             {% csrf_token %}
                             <div class="form_contact margin-bottom-20">
                                 <div id="result"></div>
@@ -83,14 +84,15 @@
                         </form>
                     </div>
                 </div>
-
-                <form action="/signup">
-                    <div class="col-md-5 col-lg-offset-1 col-md-offset-1 padding-right-none xs-padding-left-none sm-padding-left-none xs-margin-top-30">
-                        <div class="contact_wrapper information_head">
-                            <h3 class="margin-bottom-25 margin-top-none">Create New Account</h3> <input id="submit_btn" type="submit" value="Sign-Up">
+                {% if show_signup%}
+                    <form action="/signup">
+                        <div class="col-md-5 col-lg-offset-1 col-md-offset-1 padding-right-none xs-padding-left-none sm-padding-left-none xs-margin-top-30">
+                            <div class="contact_wrapper information_head">
+                                <h3 class="margin-bottom-25 margin-top-none">Create New Account</h3> <input id="submit_btn" type="submit" value="Sign-Up">
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                {% endif %}
             </div>
         </section>
     </body>
