--- a/templates/signup.html
+++ b/templates/signup.html
@@ -75,9 +75,9 @@
                             <div class="form_contact margin-bottom-20">
                                 <div id="result"></div>
                                 <fieldset id="contact_form">
-                                    <input name="username" class="form-control margin-bottom-25" placeholder="Username" required />
-                                    <input type="password" name="password" class="form-control margin-bottom-25" placeholder="Password" required="True" />
-                                    <input type="password" name="reenter_password" class="form-control margin-bottom-25" placeholder="Reenter Password" required="True" />
+                                    <input name="username" class="form-control margin-bottom-25" placeholder="Username" />
+                                    <input type="password" name="password" class="form-control margin-bottom-25" placeholder="Password"/>
+                                    <input type="password" name="reenter_password" class="form-control margin-bottom-25" placeholder="Reenter Password"/>
                                     <input type="text" name="dealer_name" class="form-control margin-bottom-25" placeholder="Dealer Name"/>
                                     <input type="text" name="address" class="form-control margin-bottom-25" placeholder="Address"/>
                                     <input type="text" name="city" class="form-control margin-bottom-25" placeholder="City"/>
